# AndroidArtDemo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_aidl_main.xml  activity_book_provider.xml  activity_different_direct_conflict.xml  activity_handle_main.xml  activity_main.xml  activity_notification_show.xml  activity_remote_notification.xml  activity_remote_view_main.xml  activity_same_direction_conflict.xml  activity_scroll_conflict.xml  activity_text_messenger.xml  activity_view_main.xml  activity_view_scroller.xml  activity_window_manager.xml  include_bottom_view.xml  main_fragment.xml  network_main_activity.xml  remote_widget_desk_layout.xml  scroll_conflict_content_list_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: remote_view_appwidget_provider_info.xml
gradle/wrapper/: gradle-wrapper.properties
module_base/: build.gradle
module_base/src/main/: AndroidManifest.xml
module_base/src/main/res/layout/: activity_module_base_main.xml  toast_custom_image_layout.xml  toast_custom_text_layout.xml
module_base/src/main/res/values/: dimens.xml  strings.xml  themes.xml
module_base/src/main/res/values-night/: themes.xml
module_ndk/: build.gradle
module_ndk/src/main/: AndroidManifest.xml
module_ndk/src/main/jni/: ReadMe.txt
module_ndk/src/main/jni/fileoperation/: CMakeLists.txt  com_example_module_ndk_file_NativeFileOperation.h  file_operation.cpp  file_operation.h
(+64 files in other folders)
